--- a/k8s/client/ingress.yaml
+++ b/k8s/client/ingress.yaml
@@ -1,17 +1,17 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: currency-service-ingress
+  name: client-ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
     - http:
         paths:
-          - path: "/api/v1"  # path: / -> http://172.30.86.27/api/v1/rates
+          - path: /
             pathType: "Prefix"
             backend:
               service:
-                name: currency-service
+                name: client-service
                 port:
-                  number: 8080
+                  number: 80
