--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 exchange.api.url = https://cdn.jsdelivr.net/gh/fawazahmed0/currency-api@1/latest/currencies/usd.json
 
-server.port=8028
+server.port=8080
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
