--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.example'
-version = '1.0.8-SNAPSHOT'
+version = '1.0.9-SNAPSHOT'
 sourceCompatibility = '17'
 
 configurations {
@@ -20,7 +20,7 @@ repositories {
 }
 
 dependencies {
-    //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     implementation 'javax.validation:validation-api:2.0.1.Final'
@@ -28,8 +28,9 @@ dependencies {
     implementation 'io.springfox:springfox-swagger2:3.0.0'
     //implementation 'io.springfox:springfox-swagger-ui:3.0.0'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'org.flywaydb:flyway-core:9.5.1'
 
-    //runtimeOnly 'org.postgresql:postgresql'
+    runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
