--- a/k8s/currencyservice/currency-service.yaml
+++ b/k8s/currencyservice/currency-service.yaml
@@ -3,10 +3,11 @@ kind: Service
 metadata:
   name: currency-service
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
     - port: 80
       targetPort: 8080
+      nodePort: 32323
   selector:
     app: currency-service
 
