--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,12 @@ exchange.api.url = https://cdn.jsdelivr.net/gh/fawazahmed0/currency-api@1/latest
 server.port=8080
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/rates
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.flyway.locations=classpath:db/migrations
